Added support to local storage

--- a/SmartMarathon.IonicApp/www/index.html
+++ b/SmartMarathon.IonicApp/www/index.html
@@ -17,6 +17,7 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <script src="lib/ng-storage/ngStorage.min.js"></script>
     <script src="lib/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
