--- a/SmartMarathon.IonicApp/www/index.html
+++ b/SmartMarathon.IonicApp/www/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; connect-src 'self' http://smartmarathon.azurewebsites.net http://smartmarathon-api.azurewebsites.net 'unsafe-inline' 'unsafe-eval';">
+      <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: http://smartmarathon.azurewebsites.net/ http://smartmarathon-api.azurewebsites.net/ https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *;">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
