Implement print functionality for calculators

--- a/SmartMarathon.IonicApp/www/index.html
+++ b/SmartMarathon.IonicApp/www/index.html
@@ -9,6 +9,7 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="lib/ion-datetime-picker/release/ion-datetime-picker.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/print.css" rel="stylesheet" media="print">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -21,6 +22,7 @@
     <script src="lib/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
